# jabbureau

./: .env.example  .gitignore  EXPORT_EXCEL_GUIDE.md  README.md  app_ui.py  convocation.csv  create_test_data.py  db.sqlite3.copie.sqlite3  db.sqlite3.old.sqlite3  manage.py  pyproject.toml  requirements.txt  tableau_emails.md
app/: main.py
app/api/: prescription_controller.py
app/models/: etape1.py  etape2.py  etape3.py  etape4.py  etape5.py  etape6.py  prescription.py
app/services/: prescription_generator.py  prescription_output.py
comptabilite/: Dockerfile  admin.py  apps.py  forms.py  middleware.py  models.py  requirements.txt  signals.py  tests.py  urls.py  utils.py  views copie.py  views.old.py  views.py  widgets.py
comptabilite/migrations/: 0001_initial.py  0002_medecin_code_code_reel_code_longue_maladie_and_more.py  0003_rename_nom_medecin_code_medecin_and_more.py  0004_facturation_date_bordereau_alter_code_tiers_payant_and_more.py  0005_alter_code_tiers_payant_alter_code_total_acte_and_more.py  0006_paiement_liste_alter_code_modificateur_and_more.py  0007_alter_code_parcours_soin_alter_code_tiers_payant_and_more.py  0008_alter_facturation_numero_facture.py  0009_alter_facturation_code_acte.py  0010_alter_facturation_total_acte.py  0011_facturation_regime_tp_alter_facturation_lieu_acte_and_more.py  0012_alter_paiement_banque_and_more.py  0013_previsionhospitalisation_alter_facturation_lieu_acte_and_more.py  0014_alter_previsionhospitalisation_colo_ag_and_more.py  (+14 more)
myproject/: context_processors.py  settings.py  urls.py  wsgi.py
templates/: base.html
(+82 files in other folders)
