[tool.poetry]
name = "jabbureau"
version = "0.1.0"
description = "Initialisation FastAPI + Streamlit pour formulaire medical en 6 etapes"
authors = ["Dev Team <dev@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^1.10.14"
streamlit = "^1.35.0"
httpx = "^0.27.0"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
